36.minikube-ingress/jay-ingress-practice/deployment-yogesh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yogeshapp
spec:
  selector:
    matchLabels:
      app: yogeshapp
  template:
    metadata:
      labels:
        app: yogeshapp
    spec:
      containers:
      - name: yogeshapp
        image: jaylunagariya/jay:y2
        ports:
        - containerPort: 80
