36.minikube-ingress/jay-ingress-practice/service-jay.yaml
apiVersion: v1
kind: Service
metadata:
  name: jayapp
spec:
  type: ClusterIP
  selector:
    app: jayapp
  ports:
  - port: 80
    targetPort: 80
