36.minikube-ingress/jay-ingress-practice/service-yogesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: yogeshapp
spec:
  type: ClusterIP
  selector:
    app: yogeshapp
  ports:
  - port: 80
    targetPort: 80
