36.minikube-ingress/jay-ingress-practice/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jay.newyeardhamaka.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jayapp
            port:
              number: 80
  - host: yogesh.newyeardhamaka.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yogeshapp
            port:
              number: 80
  tls:
  - hosts:
      - jay.newyeardhamaka.in
      - yogesh.newyeardhamaka.in
    secretName: tls-secret
