36.minikube-ingress/jay-ingress-practice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx # Adjust this as per your ingress class name
  rules:
  - host: jay.newyeardhamaka.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jayapp
            port:
              number: 80
  - host: yogesh.newyeardhamaka.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yogeshapp
            port:
              number: 80
